--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           name: Pull xd009642/tarpaulin
           command: docker pull xd009642/tarpaulin
       - run:
-          name: Generate coverage report
+          name: Run test and generate coverage report
           command: >-
             docker run --security-opt seccomp=unconfined
             -v $PWD:/volume xd009642/tarpaulin
