--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bhtsne"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["frjnn <f.iannelli.francesco229@gmail.com>"]
 edition = "2018"
 description = "Vanilla and Barnes-Hut implementations of t-SNE."
@@ -11,10 +11,17 @@ categories = ["algorithms", "science", "visualization"]
 readme = "README.md"
 exclude = ["/imgs"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[features]
+default = ["csv"]
 
 [dependencies]
 rand = "0.8.3"
 rand_distr = "0.4.0"
 pdqselect = "0.1.0"
+csv = {version = "1.1", optional = true}
+
+[dev-dependencies]
 csv = "1.1"
+
+
