--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,9 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Generate dummy data
+          name: Download iris dataset
           command: 
-            echo -e "x,y,z,w,cat\n4.0,12.0,11.1,16.2,0\n22.0,14.9,13.2,13.3,0\n11.2,45.2,34.6,76.4,1\n56.7,8.7,1.34,13.2,1\n13.3,11.2,16.2,22.0,0\n14.9,13.2,88.9,10.4,1\n12.0,11.1,16.2,76.4,0\n1.34,13.2,13.3,76.4,0" > ./data.csv;
+            curl -O "https://gist.githubusercontent.com/curran/a08a1080b88344b0c8a7/raw/0e7a9b0a5d22642a06d3d5b9bcbad9890c8ee534/iris.csv";
       - run:
           name: Pull xd009642/tarpaulin
           command: docker pull xd009642/tarpaulin
