--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bhtsne"
-version = "0.3.1"
+version = "0.4.0"
 authors = ["frjnn <f.iannelli.francesco229@gmail.com>"]
 edition = "2018"
 description = "Vanilla and Barnes-Hut implementations of t-SNE."
@@ -19,6 +19,7 @@ default = ["csv"]
 rand = "0.8.3"
 rand_distr = "0.4.0"
 pdqselect = "0.1.0"
+num-traits = "0.2.14"
 csv = {version = "1.1", optional = true}
 
 [dev-dependencies]
