--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ default = ["csv"]
 [dependencies]
 rand = "0.8.4"
 rand_distr = "0.4.1"
+rayon = "1.5.1"
 pdqselect = "0.1.0"
 num-traits = "0.2.14"
 csv = {version = "1.1.6", optional = true}
