--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,31 @@
 [package]
-authors = ["frjnn <f.iannelli.francesco229@gmail.com>"]
-categories = ["algorithms", "science", "visualization"]
-description = "Exact and Barnes-Hut implementations of t-SNE."
-edition = "2021"
-exclude = ["/imgs"]
-keywords = ["tsne", "data-visualization", "data-analysis", "Barnes-Hut", "machine-learning"]
-license = "MIT"
-name = "bhtsne"
-readme = "README.md"
-repository = "https://github.com/frjnn/bhtsne"
-version = "0.5.2"
+    authors=["frjnn <f.iannelli.francesco229@gmail.com>"]
+    categories=["algorithms", "science", "visualization"]
+    description="Exact and Barnes-Hut implementations of t-SNE."
+    edition="2021"
+    exclude=["/imgs"]
+    keywords=[
+        "Barnes-Hut",
+        "data-analysis",
+        "data-visualization",
+        "machine-learning",
+        "tsne",
+    ]
+    license="MIT"
+    name="bhtsne"
+    readme="README.md"
+    repository="https://github.com/frjnn/bhtsne"
+    version="0.5.3"
 
 [features]
-default = ["csv"]
+    default=["csv"]
 
 [dependencies]
-csv = {version = "1.1.6", optional = true}
-num-traits = "0.2.15"
-rand = "0.8.5"
-rand_distr = "0.4.3"
-rayon = "1.5.3"
+    csv       ={version="1.3", optional=true}
+    num-traits="0.2"
+    rand      ="0.8"
+    rand_distr="0.4"
+    rayon     ="1.10"
 
 [dev-dependencies]
-csv = "1.1.6"
+    csv="1.3"
