--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,17 @@
 version: 2.1
 orbs:
-  codecov: codecov/codecov@1.0.2
+  codecov: codecov/codecov@1.2.4
+
 jobs:
   build:
     machine: true
     steps:
-      - checkout
+      - run:
+          name: Checkout repository
+          command: git clone https://github.com/frjnn/bhtsne.git .
       - run:
           name: Download iris dataset
-          command: curl -O "https://gist.githubusercontent.com/curran/a08a1080b88344b0c8a7/raw/0e7a9b0a5d22642a06d3d5b9bcbad9890c8ee534/iris.csv";
+          command: curl -O "https://gist.githubusercontent.com/curran/a08a1080b88344b0c8a7/raw/0e7a9b0a5d22642a06d3d5b9bcbad9890c8ee534/iris.csv"
       - run:
           name: Pull xd009642/tarpaulin
           command: docker pull xd009642/tarpaulin
