--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
     authors=["frjnn <f.iannelli.francesco229@gmail.com>"]
     categories=["algorithms", "science", "visualization"]
     description="Exact and Barnes-Hut implementations of t-SNE."
-    edition="2021"
+    edition="2024"
     exclude=["/imgs"]
     keywords=[
         "Barnes-Hut",
@@ -15,17 +15,18 @@
     name="bhtsne"
     readme="README.md"
     repository="https://github.com/frjnn/bhtsne"
-    version="0.5.3"
+    version="0.5.4"
 
 [features]
     default=["csv"]
 
 [dependencies]
-    csv       ={version="1.3", optional=true}
+    crossbeam ="0.8"
+    csv       ={version="1", optional=true}
     num-traits="0.2"
-    rand      ="0.8"
-    rand_distr="0.4"
-    rayon     ="1.10"
+    rand      ="0.9"
+    rand_distr="0.5"
+    rayon     ="1"
 
 [dev-dependencies]
     csv="1.3"
